# DatingBot

./: .gitignore  README.md
services/MatchingService/matching-service/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
services/MatchingService/matching-service/src/: main.py
services/MatchingService/matching-service/src/application/commands/: process_like.py
services/MatchingService/matching-service/src/application/handlers/: like_handler.py
services/MatchingService/matching-service/src/application/queries/: get_matches.py
services/MatchingService/matching-service/src/domain/entities/: match.py
services/MatchingService/matching-service/src/domain/repositories/: match_repository.py
services/MatchingService/matching-service/src/domain/value_objects/: status.py
services/MatchingService/matching-service/src/infrastructure/cache/: redis.py
services/MatchingService/matching-service/src/infrastructure/database/: postgres.py
services/MatchingService/matching-service/src/infrastructure/messaging/: rabbitmq.py
services/MatchingService/matching-service/src/interfaces/schemas/: event.py  match.py
services/UserService/: .dockerignore   Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
services/UserService/src/: main.py
services/UserService/src/application/commands/: profile_commands.py  user_commands.py
services/UserService/src/application/handlers/: user_handlers.py
services/UserService/src/application/queries/: profile_queries.py
services/UserService/src/domain/entities/: profile.py
services/UserService/src/domain/repositories/: __init__.py  profile_repository.py  user_repository.py
services/UserService/src/domain/value_objects/: interests.py
services/UserService/src/infrastructure/database/: connection.py
services/UserService/src/infrastructure/database/repositories/: __init__.py
services/UserService/src/infrastructure/messaging/: __init__.py  rabbitmq.py
services/UserService/src/interfaces/api/: dependencies.py
services/UserService/src/interfaces/api/v1/: profile_router.py
services/UserService/src/interfaces/schemas/: __init__.py  user.py
services/UserService/user-service/: Dockerfile.dev  README.md  __init__.py  docker-compose.yaml
services/UserService/user-service/src/application/commands/: __init__.py
services/UserService/user-service/src/application/handlers/: __init__.py
services/UserService/user-service/src/application/queries/: __init__.py
services/UserService/user-service/src/domain/entities/: __init__.py  user.py
services/UserService/user_service/domain/entities/: __init__.py  profile.py  user.py
services/UserService/user_service/domain/repositories/: profile_repository.py  user_repository.py
(+18 files in other folders)
