[project]
name = "matching-service"
version = "0.1.0"
description = "Matching service for dating telegram bot"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "sqlalchemy==2.0.27",
    "asyncpg==0.31.0",
    "redis==4.5.0",
    "aio-pika==9.3.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "prometheus-client==0.19.0",
    "structlog==24.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "isort", "mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']